<resources>
    <string name="app_name">惠龙易通车主版</string>
    <string name="main_title">惠龙易通</string>
    <string name="action_settings">Settings</string>
    <string name="tab_main">应用</string>
    <string name="history">历史</string>
    <string name="customer_service">联系客服</string>
    <string name="failed_to_load_data">加载数据失败</string>
    <string name="view">查看</string>
    <string name="official_website">官网 http://www.hletong.com/</string>
    <string name="apply_etc">申请办理惠龙卡</string>
    <string name="etc_hint_exit">退出后填写的信息不会保存，确定要退出吗？</string>
    <string name="update">更新</string>
    <string name="invalid_param">参数出错</string>
    <string name="select_hint">请选择</string>
    <string name="hint">提示</string>
    <string name="transport_forecast">运力预报</string>
    <string name="cargo_forecast">货源预报</string>
    <string name="cargo_match">撮合货源</string>
    <string name="cargo_existing">场内货源</string>
    <string name="gjzp">挂价摘牌</string>
    <string name="bid_block">竞价投标</string>
    <string name="contract_block">网签承运</string>
    <string name="contract_hfht">货方合同</string>
    <string name="cargo_block">货源公告</string>
    <string name="invoice_block">发货单</string>
    <string name="receipt_block">收货单</string>
    <string name="message_block">信息</string>
    <string name="payment_block">支付</string>
    <string name="favorite_routine">常跑路线</string>
    <string name="add_favorite_routine">添加常跑路线</string>
    <string name="delete_favorite_routine">删除常跑路线</string>
    <string name="delete_favorite_routine_message">确定要删除%1$s吗？</string>
    <string name="call_customer_service">联系客服</string>
    <string name="phone_no">0511&#8211;85188888</string>
    <string name="custom_service_no">0511&#8211;85188888</string>
    <string name="login_member">会员登录</string>
    <string name="hint_username">请输入会员名</string>
    <string name="hint_password">请输入密码</string>
    <string name="applyCard">申请办理惠龙卡</string>
    <string name="net">官网 http://www.hletong.com/</string>
    <string name="userContract">惠龙用户注册协议</string>
    <string name="apply_info">申请办理惠龙ETC卡为会员特权，如您已有账号请先登录，无账号请注册</string>
    <string name="handle_etc">办理惠龙卡</string>
    <string name="service_hot_line">客服热线</string>
    <string name="hlet_official_website">惠龙易通官网</string>
    <string name="register_contract">惠龙易通用户注册协议</string>
    <string name="read_ensure">阅读并确认</string>
    <string name="register_contract_detail">
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;欢迎您访问惠龙易通货物运输集中配送平台！\n\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本平台以实名会员制为基础，平台本身作为主承运人竭诚为您提供最安全、最经济的货物运输服务。请您在注册入会之前，仔细阅读以下内容：\n\n
    一、申请注册的新用户必须能够独立承担相应的法律责任并遵守国家的法律法规。\n\n
    二、平台会员主要分为会员管理单位、货方会员、车辆会员、船舶会员及个人代理会员。\n\n
    三、用户线上注册成为平台会员后，平台根据会员提交资料信息的完整度分配会员权限，货方会员、车辆会员、船舶会员在权限内参与自主交易、自主开票交易、平台开票交易。\n\n
    四、平台开票交易货运业务是平台作为主承运人向货方会员承接货运业务，并将承接的待运货物信息向所有车船会员公开发布，摘牌中标的车船取得标的货物的实际承运权。货运业务结束，平台向货方会员开票结算，向车船会员支付运费总收入。\n\n
    五、平台对各类协议、守则、细则及公告等内容拥有最终的解释权和修改权。\n\n
    </string>
    <string name="registerAd">注册入会有货运&#160;&#160;&#160;&#160;现金结算速度快\n车船贷款利率低&#160;&#160;&#160;&#160;加油通行优惠多</string>
    <string name="registerAd_cargo">注册入会车船多&#160;&#160;&#160;&#160;空驶运力运费低\n货运安全有保障&#160;&#160;&#160;&#160;运费贷款利率低</string>
    <string name="shipNum">船号</string>
    <string name="hint_shipNumber">请输入船号</string>
    <string name="ship_owner">船舶所有人</string>
    <string name="hint_shipOwner">请输入船舶所有人</string>
    <string name="ship_license">船舶国籍证书</string>
    <string name="ship_info">船舶信息</string>
    <string name="ship_type">船舶类型</string>
    <string name="ship_length">船长</string>
    <string name="ship_width">型宽</string>
    <string name="ship_deep">型深</string>
    <string name="ship_full">满载吃水</string>
    <string name="ship_capacity">载重吨位</string>
    <string name="contactService">联系电话</string>
    <string name="phoneService">0511&#8211;851888888</string>
    <string name="personalRegister">个人注册</string>
    <string name="companyRegister">公司注册</string>
    <string name="carNumber">车牌号</string>
    <string name="carNum">车号</string>
    <string name="hint_carNumber">请输入车号</string>
    <string name="xinming">姓名</string>
    <string name="hint_xinming">请输入姓名</string>
    <string name="username">用户名</string>
    <string name="member_name">会员名</string>
    <string name="car_owner">车辆所有人</string>
    <string name="hint_carOwner">请输入车辆所有人</string>
    <string name="address">住址</string>
    <string name="companyAddress">公司地址</string>
    <string name="hint_address">请选择住址</string>
    <string name="hint_companyAddress">请选择公司地址</string>
    <string name="baseInfo">基本信息</string>
    <string name="set_password">密码设置</string>
    <string name="phoneVerificationCode">手机验证码</string>
    <string name="hint_input_password">请输入6&#8211;20位数字或字母</string>
    <string name="hint_confirm_psw">请再次输入密码</string>
    <string name="hint_phone_number">请输入手机号码</string>
    <string name="verificationCode">验证码</string>
    <string name="hint_verificationCode">请输入验证码</string>
    <string name="get_verificationCode">获取验证码</string>
    <string name="companyName">公司名</string>
    <string name="hint_companyName">请输入公司名</string>
    <string name="busiContract">业务联系人</string>
    <string name="hint_busiContract">请输入业务联系人</string>
    <string name="upload_front_photo">请上传身份证正面照片</string>
    <string name="upload_contrary_photo">请上传身份证反面照片</string>
    <string name="upload_photo">上传照片</string>
    <string name="upload_photo_please">请拍照上传照片</string>
    <string name="truck_attention">提示：完善选填项信息后您将成为自主开票交易会员，如需参与自主交易，请注册完成后联系所属会员管理单位办理中国建设银行惠龙卡上线摘牌承运</string>
    <string name="add_info">请输入证件号码，上传照片</string>
    <string name="vehicle_info">车辆信息</string>
    <string name="axle_info">轮轴信息</string>
    <string name="tuo_gua">拖挂轮轴</string>
    <string name="axle_number">车辆轴数</string>
    <string name="carriage_length">车厢长度</string>
    <string name="carriage_width">车厢宽度</string>
    <string name="breast_board_width">栏板高度</string>
    <string name="max_match_capacity">最大配载量</string>
    <string name="driving_license_info">请拍照上传行驶证正副本照片</string>
    <string name="backup_num">请输入备用号码</string>
    <string name="hlet_user_protocol">本人已阅读并自愿遵守《惠龙易通用户注册协议》</string>
    <string name="please_input">请输入</string>
    <string name="source_list">挂价摘牌</string>
    <string name="source_history">挂价历史</string>
    <string name="gj_input_confirm">确认摘牌</string>
    <string name="bidding_history">历史投标</string>
    <string name="competitive_bidding">竞价投标</string>
    <string name="competitive_history">历史竞价</string>
    <string name="cb_modify_price">修改竞价</string>
    <string name="hall">大厅</string>
    <string name="hint_bid_list">竞价排名只显示前8名</string>
    <string name="source_not_available">该货源当前不可摘牌</string>
    <string name="goodsSourceDetails">货源详情</string>
    <string name="good">货品</string>
    <string name="count">数量</string>
    <string name="weight">重量</string>
    <string name="fromLocation">出发地</string>
    <string name="toLocation">目的地</string>
    <string name="loading_period">装货时间：</string>
    <string name="loading_unload_days">装卸货天数</string>
    <string name="transport_deadline">运输期限</string>
    <string name="carRequire">车型要求</string>
    <string name="specialRequire">特别要求</string>
    <string name="volume">长/宽/高</string>
    <string name="measure_type">计量方式</string>
    <string name="transport_loss">运输消耗</string>
    <string name="charge_method">计费依据</string>
    <string name="settle_method">结算方式</string>
    <string name="cargo_value">总货值</string>
    <string name="comprehensive_tax_tare">综合税率</string>
    <string name="confer_price">参考价格：</string>
    <string name="bidding_imm">立即竞价</string>
    <string name="guajia">挂价：</string>
    <string name="lijizhaipai">立即摘牌</string>
    <string name="unit_ton">元/吨</string>
    <string name="deductible_tax_rate">抵扣税率</string>
    <string name="from">从</string>
    <string name="to">到</string>
    <string name="length">长</string>
    <string name="width">宽</string>
    <string name="height">高</string>
    <string name="optional">（选填）</string>
    <string name="hint_loading_time">请选择起始时间</string>
    <string name="business_doc_no">业务单据号</string>
    <string name="cargo_name">货物名称</string>
    <string name="cargo_number">填写数量</string>
    <string name="cargo_weight">填写重量</string>
    <string name="loading_psw">发货密码</string>
    <string name="commit">提交</string>
    <string name="cargo_des">摘牌数量|重量</string>
    <string name="loading_date">装货日期</string>
    <string name="loading_address">装货地</string>
    <string name="contract_review">查看合同</string>
    <string name="unload_contact">提货人</string>
    <string name="hint_unload_contact">请填写提货人姓名</string>
    <string name="sfzID">身份证号码</string>
    <string name="hint_sfzID">填写提货人身份证号码</string>
    <string name="loading_time">预装货时间</string>
    <string name="cargo_desc">数量|重量</string>
    <string name="transport_fee">运费额</string>
    <string name="confirm_password">确认密码</string>
    <string name="set_cargo_psw">设置收发货密码</string>
    <string name="transport_password">装卸货密码</string>
    <string name="transport_password_hint">请输入装卸货密码</string>
    <string name="ship_password">发货密码</string>
    <string name="ship_password_hint">请输入发货密码</string>
    <string name="ship_password_confirm_hint">请确认发货密码</string>
    <string name="receive_password">收货密码</string>
    <string name="receive_password_hint">请输入收货密码</string>
    <string name="receive_password_confirm_hint">请确认收货密码</string>
    <string name="modifyLoginPsw">修改登录密码</string>
    <string name="oldPsw">旧密码</string>
    <string name="newPsw">新密码</string>
    <string name="inputOldPsw">请输入旧密码</string>
    <string name="inputNewPsw">请输入6&#8211;20位新密码</string>
    <string name="inputNewPswAgain">请再次输入新密码</string>
    <string name="sure">确认</string>
    <string name="apply_now">立即申请</string>
    <string name="hlCard_detail">该卡具备了建行龙卡信用卡的金融透支、8000多家商户的消费优惠功能、ETC储值卡全国高速通行优惠功能以及惠龙易通物流行业应用增值服务
                （如撬装加油、园区管理等）功能，为持卡人提供衣、食、住、行等各方面的便利。\n\n<b>透支消费额度高、高速通行优惠多、平台增值服务优!</b></string>
    <string name="hlCard_detail2">“惠龙易通ETC信用卡”是惠龙易通联合中国建设银行总行、江苏高速面向惠龙易通物流电商平台全国会员发行的互联网创新型联名ETC信用卡。</string>
    <string name="hlCard_safe">使用了CPU芯片，具有独立运算、加解密和存储能力，安全性能更高。同时，卡片与读卡器之间采用加密的数据通信方式交换数据，
                具有很强的安全认证机制，为客户提供更安全的交易环境。</string>
    <string name="hlCard_speedy">1.芯片中加载MTC应用，可实现高速公路电子缴费功能。\n2.可绑定惠龙卡借记卡实现约定账户还款。</string>
    <string name="hlCard_overflow">不论客户身处何地，凭卡面专属热购标识享全国联盟商户优惠权益。</string>
    <string name="hlCard_intimate">为您提供7×24小时全天候客户服务热线、中国建设银行微信公众号即可查询本期账单、帐户余额、信用额度、积分余额。</string>
    <string name="Card_Saturday">龙卡星期六</string>
    <string name="safe">安全</string>
    <string name="safe_introduce">芯片介质,安全用卡</string>
    <string name="speedy_introduce">高速畅行,便捷还款</string>
    <string name="intimate_introduce">贴心服务，全天恭候</string>
    <string name="food_introduce">哈根达斯满60减30,必胜客满100减50</string>
    <string name="cost_introduce">满300送30元屈臣氏、全家便利店电子购物券1张！</string>
    <string name="speedy">便捷</string>
    <string name="overflow">超值</string>
    <string name="intimate">贴心</string>
    <string name="food">周六5折享美食！</string>
    <string name="movie">周六蜘蛛网5元看电影！</string>
    <string name="cost">周六单笔消费</string>
    <string name="scenic">周六同程网1元玩景点！</string>
    <string name="stage">分期功能</string>
    <string name="car_stage">购车分期</string>
    <string name="business_stage">商户分期</string>
    <string name="fitment_stage">装修分期</string>
    <string name="pay_stage">账单分期</string>
    <string name="money_stage">现金分期</string>
    <string name="money_stage_introduce">持卡人可通过网银、建行善融商务、网点等渠道办理无担保、无抵押现金分期业务，并可自由选择3、6、12、18、24期分期还款。\n具体活动详情以中国建设银行当期活动为准！</string>
    <string name="pay_stage_introduce">持卡人可通过微信、手机银行、短信等渠道申请办理最高90%账单余额的账单分期业务，并可自由选择3、6、12、18、24期分期还款。</string>
    <string name="fitment_stage_introduce">持卡人可在建材、装修、装潢、家具类等指定商户享受0利息、低手续费率的装修分期付款服务。</string>
    <string name="business_stage_introduce">持卡人可在苏宁电器、百安居、美克美家等知名商户享受商户分期服务，并享有积分回馈礼遇。</string>
    <string name="car_stage_introduce">持卡人可享受上海大众、一汽大众、一汽奥迪等知名品牌指定车型最长36月、最高50万元的购车分期服务。</string>
</resources>