<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/CommonInputViewNormalStyle.White"
        app:linePosition="top|bottom"
        android:id="@+id/title"
        app:mode="view"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/CommonInputViewNormalStyle.White"
        app:mode="view"
        android:id="@+id/plate"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/CommonInputViewNormalStyle.White"
        app:mode="view"
        app:inputLabel="@string/cargo_desc"
        android:id="@+id/desc"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/CommonInputViewNormalStyle.White"
        app:mode="view"
        app:inputLabel="交易单价(含税)"
        android:id="@+id/unit_price"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/CommonInputViewNormalStyle.White"
        app:mode="view"
        app:inputLabel="其他收入"
        android:id="@+id/other_price"
        android:visibility="gone"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/CommonInputViewNormalStyle.White"
        app:mode="view"
        app:inputLabel="@string/transport_fee"
        android:id="@+id/fee"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/CommonInputViewNormalStyle.White"
        app:inputLabel="@string/unload_contact"
        app:inputHint="@string/hint_unload_contact"
        android:id="@+id/picker"
        app:inputIconSuffix="@drawable/icon_person"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/CommonInputViewNormalStyle.White"
        app:inputLabel="@string/sfzID"
        app:inputHint="@string/hint_sfzID"
        android:id="@+id/id_no"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/CommonInputViewNormalStyle.White"
        app:inputLabel="@string/loading_time"
        app:inputHint="@string/hint_loading_time"
        android:id="@+id/pre_load_time"
        app:mode="select"/>
</LinearLayout>