<?xml version="1.0" encoding="utf-8"?>
<com.hletong.mob.widget.BorderLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:linePosition="top"
    app:lineTopLeft="@dimen/margin_15dp"
    app:lineTopRight="@dimen/margin_15dp"
    android:orientation="vertical">
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/SourcePreview.Small"
        android:id="@+id/bus_doc_no"
        app:inputLabel="@string/business_doc_no"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/SourcePreview.Small"
        android:id="@+id/cargo_value"
        app:inputLabel="@string/cargo_value"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/SourcePreview.Small"
        android:id="@+id/tax"
        app:inputLabel="综合税费"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/SourcePreview.Small"
        android:id="@+id/volume"
        app:inputLabel="@string/volume"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/SourcePreview.Small"
        android:id="@+id/measure_type"
        app:inputLabel="@string/measure_type"/>
     <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/SourcePreview.Small"
        android:id="@+id/charge_type"
        app:inputLabel="@string/charge_method"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/SourcePreview.Small"
        android:id="@+id/billingType"
        app:inputLabel="开票方式"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/SourcePreview.Small"
        android:id="@+id/settle_method"
        app:inputLabel="@string/settle_method"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/SourcePreview.Small"
        android:id="@+id/multi_transport"
        app:inputLabel="@string/settle_method"/>
    <com.hletong.hyc.ui.widget.CommonInputView
        style="@style/SourcePreview.Small"
        android:id="@+id/transport_loss"
        app:inputLabel="@string/transport_loss"/>
</com.hletong.mob.widget.BorderLinearLayout>
